style/custom.css
/* ... */
.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus, .dropdown-submenu:hover>a, .dropdown-submenu:focus>a {
    color: [[setting:color3]];
    background-color: [[setting:color2]];
    background-image: none;
}

#main_navigation .nav .dropdown-toggle .caret {
	border-top-color: [[setting:color3]];
	border-bottom-color: [[setting:color3]];
}

#main_menu{
	margin-right: 20px;
}

.dropdown-submenu.pull-left>.dropdown-menu {
	min-width: 100%;
}

.dropdown-submenu.pull-left {
    min-width: 260px;
}

#main_menu .navbar-search{
	margin-left: 15px;
}

#main_menu .dropdown-menu a:hover{
    text-decoration: none;
    color: [[setting:color3]];
    background-color: [[setting:color2]];
    background-image: none;
}

#main_menu .dropdown-menu a {
  display: block;
  padding: 2px 1em 2px 28px;
  color: #333;
}

#main_menu .dropdown-menu a:hover i.fa {
    color: [[setting:color3]];
}

#main_menu .dropdown-menu i.fa {
  width: 12px;
  height: 12px;
  line-height: 12px;
  font-size: 12px;
  vertical-align: middle;
  margin: 4px 4px 4px -24px;
}

.agora_navbar{
	text-align: right;
}
.agora_navbar img{
	margin-right: 5px;
	vertical-align: top;
}

.edit-btn i.fa {
    color: white;
    margin-right: 0.5em;
}

.moodle-actionmenu[data-enhanced].show .menu a:hover {
    color: [[setting:color3]];
    background-color: [[setting:color2]];
}

.moodle-actionmenu[data-enhanced].show .menu a:hover i.fa {
    color: [[setting:color3]];
}



/* Footer */

#page-footer{
    border-top: 0;
    padding: 0;
}
#page-footer-top{
	background-color: [[setting:color2]]; /* Color*/
	color: [[setting:color3]];
    padding: 1em;
    text-align: center;
}

#page-footer-top .social-icons img,
#page-footer-top .social-icons i{
	margin-left: 5px;
	margin-bottom: 3px;
	height: 32px;
    width: 32px;
    line-height: 32px;
    font-size: 20px;
    color: white;
    vertical-align: middle;
    border-radius: 60px;
}

#page-footer-top .social-icons  i.fa-globe{
	background-color: [[setting:color3]];
	color: [[setting:color2]];
}

#page-footer-top .social-icons  i.fa-phone{
	background-color: #34af23;
}

#page-footer-top .social-icons  i.fa-envelope{
	background-color: #9B90C8;
}

#page-footer-top .social-icons .nodes img{
	background-color: #1b393a;
}

#page-footer-top .social-icons .intranet img{
	background-color: #739cce;
}

#page-footer-top .social-icons  i.fa-whatsapp{
    background-color: #34af23;
}

#page-footer-top .social-icons  i.fa-facebook{
	background-color: #3b5998;
}

#page-footer-top .social-icons i.fa-twitter{
	background-color: #55acee;
}

#page-footer-top .social-icons i.fa-google-plus{
	background-color: #d34836;
}

#page-footer-top .social-icons i.fa-pinterest{
	background-color: #cb2027;
}

#page-footer-top .social-icons i.fa-instagram{
	background-color: #517fa4;
}

#page-footer-top .social-icons i.fa-flickr{
	background-color: #ff0084;
}

#page-footer-top .social-icons i.fa-youtube{
	background-color: #cd201f;
}

#page-footer-top .social-icons i.fa-linkedin{
	background-color: #007bb6;
}

#page-footer-top .social-icons i.fa-skype{
    background-color: #00AFF0;
}

#page-footer-top a{
	color: [[setting:color3]];
	text-decoration: underline;
}

#page-footer-top a.btn, #page-footer-top .dropdown-menu a{
	color: #333;
	text-decoration: none;
}
#page-footer-top .dropdown-menu>li>a:hover{
	color: white;
}

#page-footer-top li{
	list-style: none;
	display: inline-block;
}

#page-footer-top li.lang {
	margin-left: 5px;
	margin-bottom: 3px;
	height: 32px;
    width: 32px;
    line-height: 32px;
    font-size: 16px;
    color: white;
    vertical-align: middle;
    border-radius: 60px;
	background-color: #999;
	text-decoration: none;
	font-family: arial, helvetica, clean, sans-serif;
}

#page-footer-top li.lang a {
	text-decoration: none;
}

#page-footer-top li.current-lang {
	background-color: #fff;
	color: [[setting:color2]];
	font-weight: bolder;
}

#page-footer-top li.lang:hover,
#page-footer-top li.lang a:hover {
	background-color: #000;
	text-decoration: none;
	cursor: pointer;
}

#page-footer-top li.current-lang:hover {
	background-color: #fff;
	cursor: default;
}

#page-footer-top a:hover{
	text-decoration: none;
}

.footerlogos{
	text-align: center;
	margin: 8px 0;
}

.back-to-top i {
    opacity: 0.3;
    display: block;
    background-color: #333333;
    color: white;
    border-radius: 50%;
    position: fixed;
    height: 32px;
    width: 32px;
    line-height: 32px;
    vertical-align: middle;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    border-radius: 50%;
    bottom: 20px;
    right: 20px;
}

.back-to-top i {
    font-size: 32px;
    color: white;
}


#page{
    padding: 8px 30px;
}

.logininfo img{
	margin-right: 5px;
}

.img-rounded.userpic {
	border: 1px solid #DDD;
}

#message_notifier{
	margin-right: 20px;
	margin-top: 2px;
}

#message_notifier #message_contents>li:hover, #message_notifier #message_contents>li:hover .time{
    color: [[setting:color3]];
    background-color: [[setting:color2]];
}


.course-content .current {
	background-color: #f5f5f5;
}

#newmessageoverlay{
    display: none;
}

.nav-tabs>.active>a, .nav-tabs>.active>a:hover, .nav-tabs>.active>a:focus,
.nav-tabs>.ui-state-active>a, .nav-tabs>.ui-state-active>a:hover, .nav-tabs>.ui-state-active>a:focus {
	color: #555;
	cursor: default;
	background-color: #fff;
	border: 1px solid #ddd;
	border-bottom-color: transparent;
}

#showhideblocks, #showhideblocks i {
    height: 36px;
    width: 36px;
    cursor: pointer;
    text-align: center;
}

#showhideblocks:before{
	display: inline-block;
	font: normal normal normal 24px/1 FontAwesome;
	text-rendering: auto;
	line-height: 36px;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

#showhideblocks.expanded:before{
    content:"\f066";
}
#showhideblocks.collapsed:before{
    content:"\f065";
}
/* ... */

